adding uploaded page and get endpoint to bring img